--- a/package.json
+++ b/package.json
@@ -15,13 +15,11 @@
     "@fontsource/roboto": "^5.0.8",
     "@mui/icons-material": "^5.15.7",
     "@mui/material": "^5.15.7",
+    "firebase": "^10.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.1"
-
-
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
@@ -34,4 +32,3 @@
     "vite": "^5.0.8"
   }
 }
-
